--- a/style.css
+++ b/style.css
@@ -8,22 +8,22 @@
       color: white;
       background-color: #111;
     }
-    .navbar {
+     .navbar {
+      background-color: #000;
+      color: white;
+      padding: 1em 2em;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 40px;
-      background-color: rgba(0,0,0,0.8);
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 999;
     }
     .navbar a {
       color: white;
-      margin-left: 20px;
+      margin: 0 1em;
       text-decoration: none;
       font-weight: bold;
+    }
+    .navbar a:hover {
+      text-decoration: underline;
     }
     .hero {
       height: 100vh;
@@ -38,7 +38,7 @@
     .hero h1 {
       font-size: 2.8rem;
       font-weight: 700;
-      text-shadow: 2px 2px 10px black;
+      text-shadow: 2px 2px 10px rgb(255, 253, 253);
     }
     .hero p {
       margin-top: 10px;
@@ -53,6 +53,7 @@
       text-align: center;
       margin-bottom: 40px;
       font-size: 2.2rem;
+       color: #aaa;
     }
     .grid {
       display: grid;
@@ -73,6 +74,7 @@
     }
     .card h3 {
       margin-bottom: 10px;
+      color: #222;
     }
     .about {
       background-color: #1a1a1a;
